--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,11 @@
        android:orientation="vertical">
 
        <include layout="@layout/toolbar" />
+       
+       <FrameLayout
+           android:id="@id/main_container"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
 
    </LinearLayout>
 
