--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@id/nav_home"
+        android:id="@id/nav_header_home"
         android:icon="@drawable/ic_home"
         android:orderInCategory="100"
         android:title="@string/nav_home_title"
