Mnor tweaks to navigation header. Started with Butterknife implementation.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,5 +21,6 @@
     <item name="player_surname" type="id"/>
     <item name="player_age" type="id"/>
     <item name="player_position" type="id"/>
+    <item name="header_icon" type="id"/>
 
 </resources>
