--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimaryDark"
+    android:background="@drawable/header_background"
     android:fitsSystemWindows="true"
     app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
 
