--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.cobeosijek.nkkutjevo.ui.team.activities.PlayerDetailsActivity">
+
+    <include layout="@layout/toolbar" />
 
     <TextView
         android:layout_width="match_parent"
