--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -1,18 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.cobeosijek.nkkutjevo.ui.team.activities.PlayerDetailsActivity">
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@id/toolbar"
+        layout="@layout/toolbar" />
+
+    <ImageView
+        android:id="@id/player_details_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/toolbar"
+        android:layout_margin="10dp"
+        android:contentDescription="@string/player_image_content_description"
+        android:src="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@id/player_details_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:layout_margin="10dp"
+        android:layout_toEndOf="@id/player_details_image"
         android:gravity="center"
-        android:text="Player Details"
-        android:textSize="40sp" />
+        android:textSize="30sp" />
 
-</LinearLayout>
+    <TextView
+        android:id="@id/player_details_surname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_name"
+        android:layout_margin="10dp"
+        android:layout_toEndOf="@id/player_details_image"
+        android:gravity="center"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@id/label_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/player_details_image"
+        android:layout_margin="10dp"
+        android:text="@string/label_age_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_age"
+        android:layout_margin="10dp"
+        android:text="@string/label_position_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_appearance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_position"
+        android:layout_margin="10dp"
+        android:text="@string/label_appearances_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_minutes_played"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_appearance"
+        android:layout_margin="10dp"
+        android:text="@string/label_minutes_played_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_goals_scored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_minutes_played"
+        android:layout_margin="10dp"
+        android:text="@string/label_goals_scored_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_yellow_cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_goals_scored"
+        android:layout_margin="10dp"
+        android:text="@string/label_yellow_cards"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/label_red_cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/label_yellow_cards"
+        android:layout_margin="10dp"
+        android:text="@string/label_red_cards_text"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_image"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_age"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_age"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_position"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_appearance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_position"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_appearance"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_minutes_played"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/label_appearance"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_minutes_played"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_goals_scored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_minutes_played"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_goals_scored"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_yellow_cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_goals_scored"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_yellow_cards"
+        android:gravity="center"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@id/player_details_red_cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player_details_yellow_cards"
+        android:layout_margin="10sp"
+        android:layout_toEndOf="@id/label_red_cards"
+        android:gravity="center"
+        android:textSize="20sp" />
+</RelativeLayout>
