--- a/app/src/main/res/layout/gallery_recycler_view_item.xml
+++ b/app/src/main/res/layout/gallery_recycler_view_item.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@id/gallery_item_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="0dp" />
 </LinearLayout>
