--- a/app/src/main/res/layout/team_recycler_view_item.xml
+++ b/app/src/main/res/layout/team_recycler_view_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/team_rec_view_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/recycler_item_background">
+    android:background="@color/recyclerItemBackground">
 
     <ImageView
         android:id="@id/player_image"
@@ -26,12 +27,12 @@
         android:id="@id/player_surname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/player_name"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@id/player_image"
-        android:layout_below="@id/player_name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
 
