--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFF</color>
-    <color name="recycler_item_background">#cdffcd</color>
+    <color name="statusBarColor">#008600</color>
+    <color name="recyclerItemBackground">#97ef97</color>
+    <color name="imageDetailsBackground">#000</color>
+
 </resources>
