--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,8 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/schedule_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cobeosijek.nkkutjevo.ui.schedule.ScheduleFragment">
+    tools:context="com.example.cobeosijek.nkkutjevo.ui.schedule.fragments.ScheduleFragment">
 
     <TextView
         android:id="@id/table_header_team"
@@ -67,6 +68,22 @@
         android:layout_toEndOf="@id/table_header_goals_against"
         android:text="@string/goal_difference" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/ranking_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_below="@id/table_header_team" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ranking_recycler_view">
+
+        <CalendarView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
