Created frame for images, implemented zoom. Created Radar chart

--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -177,4 +177,11 @@
         android:layout_toEndOf="@id/label_red_cards"
         android:gravity="center"
         android:textSize="20sp" />
+
+    <com.github.mikephil.charting.charts.RadarChart
+        android:id="@id/radar_chart"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
