--- a/app/src/main/res/layout/gallery_recycler_view_item.xml
+++ b/app/src/main/res/layout/gallery_recycler_view_item.xml
@@ -6,10 +6,11 @@
 
     <ImageView
         android:id="@id/gallery_item_image"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="0dp" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/image_border"/>
 </LinearLayout>
