--- a/app/src/main/res/layout/team_recycler_view_item.xml
+++ b/app/src/main/res/layout/team_recycler_view_item.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@id/player_image"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@id/player_surname"
@@ -34,6 +34,18 @@
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@id/player_image"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@id/player_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="2dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16sp" />
 
 </RelativeLayout>
