Changed FeedResponse model. Refactored Homefragment. Wrote Gson parser

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFF</color>
     <color name="statusBarColor">#008600</color>
-    <color name="recyclerItemBackground">#97ef97</color>
+    <color name="recyclerItemBackground">#bfbfbf</color>
     <color name="imageDetailsBackground">#000</color>
     <color name="tableHeaderColor">#000</color>
 
