--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.cobeosijek.nkkutjevo.ui.team.activities.PlayerDetailsActivity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.example.cobeosijek.nkkutjevo.ui.team.activities.PlayerDetailsActivity">
 
     <include
         android:id="@id/toolbar"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar"/>
 
     <ImageView
         android:id="@id/player_details_image"
@@ -16,7 +16,7 @@
         android:layout_below="@id/toolbar"
         android:layout_margin="10dp"
         android:contentDescription="@string/player_image_content_description"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round"/>
 
     <TextView
         android:id="@id/player_details_name"
@@ -27,18 +27,28 @@
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/player_details_image"
         android:gravity="center"
-        android:textSize="30sp" />
+        android:textSize="30sp"/>
 
     <TextView
         android:id="@id/player_details_surname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/player_details_name"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/player_details_image"
         android:gravity="center"
-        android:textSize="30sp" />
+        android:textSize="30sp"/>
+
+    <TextView
+        android:id="@id/player_details_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textSize="30sp"/>
 
     <TextView
         android:id="@id/label_age"
@@ -48,7 +58,7 @@
         android:layout_below="@id/player_details_image"
         android:layout_margin="10dp"
         android:text="@string/label_age_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_position"
@@ -58,7 +68,7 @@
         android:layout_below="@id/label_age"
         android:layout_margin="10dp"
         android:text="@string/label_position_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_appearance"
@@ -68,7 +78,7 @@
         android:layout_below="@id/label_position"
         android:layout_margin="10dp"
         android:text="@string/label_appearances_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_minutes_played"
@@ -78,7 +88,7 @@
         android:layout_below="@id/label_appearance"
         android:layout_margin="10dp"
         android:text="@string/label_minutes_played_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_goals_scored"
@@ -88,7 +98,7 @@
         android:layout_below="@id/label_minutes_played"
         android:layout_margin="10dp"
         android:text="@string/label_goals_scored_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_yellow_cards"
@@ -98,7 +108,7 @@
         android:layout_below="@id/label_goals_scored"
         android:layout_margin="10dp"
         android:text="@string/label_yellow_cards"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/label_red_cards"
@@ -108,7 +118,7 @@
         android:layout_below="@id/label_yellow_cards"
         android:layout_margin="10dp"
         android:text="@string/label_red_cards_text"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_age"
@@ -118,7 +128,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_age"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_position"
@@ -128,7 +138,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_position"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_appearance"
@@ -138,7 +148,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_appearance"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_minutes_played"
@@ -148,7 +158,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_minutes_played"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_goals_scored"
@@ -158,7 +168,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_goals_scored"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_yellow_cards"
@@ -168,7 +178,7 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_yellow_cards"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@id/player_details_red_cards"
@@ -178,12 +188,13 @@
         android:layout_margin="10sp"
         android:layout_toEndOf="@id/label_red_cards"
         android:gravity="center"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
     <com.github.mikephil.charting.charts.RadarChart
         android:id="@id/radar_chart"
-        android:layout_width="300dp"
-        android:layout_height="350dp"
+        android:layout_width="280dp"
+        android:layout_height="300dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:padding="0dp"/>
 </RelativeLayout>
