--- a/app/src/main/res/layout/team_recycler_view_item.xml
+++ b/app/src/main/res/layout/team_recycler_view_item.xml
@@ -9,7 +9,8 @@
         android:id="@id/player_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@id/player_name"
