--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.example.cobeosijek.nkkutjevo.ui.home.HomeFragment">
+              tools:context="com.example.cobeosijek.nkkutjevo.ui.home.fragments.HomeFragment">
 
     <android.support.v4.view.ViewPager
         android:id="@id/home_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="10dp"
         android:background="@color/recyclerItemBackground"/>
 
