--- a/app/src/main/res/layout/home_pager_item.xml
+++ b/app/src/main/res/layout/home_pager_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@id/home_pager_item_image"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="270dp"
         android:scaleType="centerCrop"/>
 
     <TextView
@@ -15,5 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_gravity="center"
+        android:textSize="20sp"
         android:gravity="center"/>
 </LinearLayout>
