--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -47,6 +47,7 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@id/toolbar"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:textSize="30sp"/>
 
