--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,13 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.cobeosijek.nkkutjevo.ui.news.fragments.NewsFragment">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="com.example.cobeosijek.nkkutjevo.ui.news.fragments.NewsFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/news_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="News Fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
